# SDL2SHOOTER

./: .gitignore  CMakeLists.txt
src/: Game.cpp  Game.h  Object.h  Scene.h  SceneMain.cpp  SceneMain.h  main.cpp
